--- a/free.html
+++ b/free.html
@@ -214,7 +214,7 @@
             <div class="u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
                 <img src="images/adobe-illustrator-logo.png" alt="" class="u-image u-image-default u-image-2" data-image-width="600" data-image-height="600" data-animation-name="customAnimationIn" data-animation-duration="1000">
-                <h5 class="u-align-center u-text u-text-4"> illistrator</h5>
+                <h5 class="u-align-center u-text u-text-4"> Adobe Illustrator</h5>
                 <p class="u-align-right u-text u-text-default u-text-5"> الدورة الشاملة فى الإلستراتور 
 باللغة العربية 
  كورس شامل في تعلم إحتراف الإلستراتور بفروعه (رسم- نظريات الوان- خط - جرافيك ديزاين - رسم شخصيات- تايبوجرافى-صور) بشكل فنى مع نظريات التصميم
