--- a/linux.html
+++ b/linux.html
@@ -120,7 +120,7 @@
             <div class="u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <img src="images/What-is-New-in-Kali-Linux-2022.3-And-How-to-Upgrade-Kali-Linux-to-2022.3.jpg" alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="2240" data-image-height="1260" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">
-                <h5 class="u-align-center u-text u-text-default u-text-4">KALI LUNIX</h5>
+                <h5 class="u-align-center u-text u-text-default u-text-4">KALI LINUX</h5>
                 <p class="u-align-right u-text u-text-5"> كورس  لتعلم: أساسيات نظام كالي لينكس باللغة العربية 
  سوف تتعلم في هذا الكورس:
 سيتعلم الطلاب اساسيات توزيعة كالي لينكس
